EXAMPLES/pragma.sym
anytype             1       0       4       3                           
doof                1       0       8       3                           
me                  8       0       9       14                          
0                   9       0       0       0                           
=                   9       0       6       14                          
